Add ignore files, change font size, change word wrap to false

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 #################
+## Sublime Text 3
+#################
+encoding_cache.json
+Package Control.last-run
+
+#################
 ## Eclipse
 #################
 
