--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 #################
 encoding_cache.json
 Package Control.last-run
+Package Control.merged-ca-bundle
+Package Control.system-ca-bundle
+Package Control.user-ca-bundle
 
 #################
 ## Eclipse
