--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Package Control.last-run
 Package Control.merged-ca-bundle
 Package Control.system-ca-bundle
 Package Control.user-ca-bundle
+Package Control.cache/
 
 #################
 ## Eclipse
